--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <service android:name=".FCM.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -49,7 +50,8 @@
             android:label="@string/title_activity_home"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".Activites.Login" />
+
+        <activity android:name=".Activites.Login" android:screenOrientation="portrait" />
 
         <meta-data
             android:name="preloaded_fonts"
@@ -58,6 +60,7 @@
         <activity
             android:name=".Activites.Registration"
             android:screenOrientation="portrait" />
+
         <activity android:name=".Activites.WebViewOpen"  android:screenOrientation="portrait" />
         <activity android:name=".Activites.MainActivity"  android:screenOrientation="portrait"/>
         <activity android:name=".Activites.SelectCity"  android:screenOrientation="portrait"/>
